# agentic-sql-rag

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  sample_questions_and_answers.md
Notes/: Simplified-Production-Graph  sql-tool
api/: chat_api.py  chat_models.py
core/: db.py  llm.py  schema_cache.py
graph/: conditional_edges.py  graph.py  state.py
memory/: memory.py
nodes/: nodes.py
prompts/: system_prmpts.py
sql_table_data_import/: how-to-insert-mock-data-into-tables.md
tests/: test_workflow.py
tools/: sql_tools.py
