[project]
name = "agentic-sql-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.8.16",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
